--- a/Day_2/풀이 과정.md
+++ b/Day_2/풀이 과정.md
@@ -1,21 +1,80 @@
-문제 1.
+### 문제 1.
 ```css
 public int CompareSolution(int num1, int num2)
 {
+    반환값이 1 또는 -1 둘로 나타나기에 조건연산자인 ? : 사용한다.
     return num1 == num2 ? 1 : -1; 
 }
 ```
-반환값이 1 또는 -1 둘로 나타나기에 조건연산자인 ? : 사용한다.
-
 <br>
 
-문제 2.
-```
+### 문제 2.
+```css
 public int Divsolution(int num1, int num2)
 {
+    정수를 나눈 값이 소수가 나올수 있으므로 실수형 자료형인 float를 사용하여 결과값을 가진다. 
     float div = (float)num1 / num2;
 
+    해당 값에 1,000을 곱한 후 결과값을 정수형 자료형으로 반환하기위해 형변환을 진행
     return (int)(div * 1000);
 }
 ```
-정수를 나눈 값이 소수가 나올수 있으므로 실수형 자료형인 float를 사용하여 결과값을 가진다. 해당 값에 1,000을 곱한 후 
+<br>
+
+### 문제 3.
+```css
+public int[] solution(int numer1, int denom1, int numer2, int denom2)
+{
+    int[] answer = new int[] { };
+
+    int denom;   분모
+    int number;  분자
+    int div = denom1 < denom2 ? denom2 / denom1 : denom1 / denom2;
+
+    2개의 분모가 같은지 다른지 확인
+    다를 시
+    if(denom1 != denom2)
+    {
+        //막힌 부분 서로의 분모가 다른데, 하나의 분모다 다른 하나의 분모의 약수일 때
+        if(div * denom1 == denom2 || div * denom2 == denom1)
+        {
+            
+        }
+
+        서로의 분모를 곱해서 하나의 분모를 만들고
+        분자는 서로의 분모의 값을 곱한 후 더해서 하나의 분자를 만든다.
+        denom = denom1 * denom2;
+        number = (numer1 * denom2) + (numer2 * denom1);
+    }
+    같을 시 분모는 둘 중 하나의 값을 가지고 분자는 서로 더한다.
+    else
+    {
+        denom = denom1;
+        number = numer1 + numer2;
+    }
+
+    결과 값을 answer배열에 넣는다. 첫번째는 분자, 두번째는 분모
+    answer[0] = number;
+    answer[1] = denom;
+
+    return answer;
+}
+```
+<br>
+
+### 문제 4.
+```css
+public static int[] solution(int[] numbers)
+{
+    answer 초기화 단계
+    int[] answer = new int[numbers.Length];
+
+    answer의 배열에는 numbers의 값의 2배의 값을 넣는다.
+    for (int i = 0; i < numbers.Length; i++)
+    {
+        answer[i] = numbers[i] * 2;
+    }
+
+    return answer;
+}
+```
