--- a/Day_3/풀이과정.md
+++ b/Day_3/풀이과정.md
@@ -1,5 +1,5 @@
 # Day 3
-프로그래머스 코딩테스트
+프로그래머스 코딩테스트 입문
 
 ### [문제 1.](https://school.programmers.co.kr/learn/courses/30/lessons/120810)
 ---
@@ -13,7 +13,7 @@
         }
 ```
 
-### [문제 2.]
+### [문제 2.](https://school.programmers.co.kr/learn/courses/30/lessons/120811)
 ---
 문제 : 중앙값은 어떤 주어진 값들을 크기의 순서대로 정렬했을 때 가장 중앙에 위치하는 값을 의미합니다. 예를 들어 1, 2, 7, 10, 11의 중앙값은 7입니다. 정수 배열 array가 매개변수로 주어질 때, 중앙값을 return 하도록 solution 함수를 완성해보세요.
 
@@ -27,5 +27,30 @@
             int mid = array.Length / 2;
 
             return array[mid];
+        }
+```
+
+### [문제 3.](https://school.programmers.co.kr/learn/courses/30/lessons/120813)
+---
+문제 : 정수 n이 매개변수로 주어질 때, n 이하의 홀수가 오름차순으로 담긴 배열을 return하도록 solution 함수를 완성해주세요.
+
+풀이 : 해당 배열의 크기를 정하기 위해 매개변수가 짝수인지 홀수인지를 확인한 후 배열의 크기로 대입.  
+for문을 통해 매개변수까지 돌려서 홀수만 배열에 넣는다.
+```cs
+        public static int[] EvenNumbersolution(int n)
+        {
+            int size = n % 2 == 0 ? n / 2 : n / 2 + 1;
+            int[] answer = new int[size];
+            int count = 0;
+
+            for (int i = 0; i <= n; i++)
+            {
+                if (i % 2 != 0)
+                {
+                    answer[count++] = i;
+                }                  
+            }
+
+            return answer;
         }
 ```
