--- a/Day_4/풀이 과정.md
+++ b/Day_4/풀이 과정.md
@@ -39,3 +39,41 @@
             return answer;
         }
 ```
+
+### [문제 3.](https://school.programmers.co.kr/learn/courses/30/lessons/120829)
+문제 : 각에서 0도 초과 90도 미만은 예각, 90도는 직각, 90도 초과 180도 미만은 둔각 180도는 평각으로 분류합니다. 각 angle이 매개변수로 주어질 때 예각일 때 1, 직각일 때 2, 둔각일 때 3, 평각일 때 4를 return하도록 solution 함수를 완성해주세요.  
+예각 : 0 < angle < 90  
+직각 : angle = 90  
+둔각 : 90 < angle < 180  
+평각 : angle = 180  
+
+풀이 : 매개변수로 받은 angle의 값을 if문을 사용하여 원하는 값이 들어왔을 때 해당 값으로 반화. 다른 값이 들어왔을 시 예외처리도 하였다.
+```cs
+        public int AngleSolution(int angle)
+        {
+            int answer = 0;
+
+            if(angle > 0 && angle < 90)
+            {
+                answer = 1;
+            }
+            else if(angle > 90 && angle < 180)
+            {
+                answer = 3;
+            }
+            else if(angle == 90)
+            {
+                answer = 2;
+            }
+            else if(angle == 180)
+            {
+                answer = 4;
+            }
+            else
+            {
+                Console.WriteLine("잘못된 입력을 하였습니다.");
+            }
+
+            return answer;
+        }
+```
